syntax = "proto3";

package payment;

option go_package="github.com/paveletto99/microservice-blueprint/internal/pb/payment";

message CreatePaymentRequest {
  float price =1;
}

message CreatePaymentResponse{
  int64 bill_id =1;
}

service Payment {
  rpc Create(CreatePaymentRequest)
    returns (CreatePaymentResponse) {}
}